--- a/app/modules/welcome/scss/_welcome.scss
+++ b/app/modules/welcome/scss/_welcome.scss
@@ -5,17 +5,6 @@
   }
 }
 
-section#social-networks{
-  text-align: center;
-  padding: 1em;
-  span, p{
-    color: #999;
-    .link{
-      color: white;
-    }
-  }
-}
-
 /*Small screens*/
 @media screen and (max-width: $small-screen) {
 }
